src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>C501_Geolocation__c</fullName>
        <inlineHelpText>Geolocation for this training event</inlineHelpText>
        <label>Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>C501_Get_Geolocation__c</fullName>
        <description>Link to get Geolocation from Google Geolocate API.</description>
        <formula>IF(OR(NOT(ISBLANK( TEXT(Location__c))),NOT(ISBLANK( Location_Other__c ))), HYPERLINK(&quot;https://maps.googleapis.com/maps/api/geocode/json?address=&quot;+TEXT(Location__c)+Location_Other__c+&quot;&amp;key=AIzaSyCuclHFQbLdYBQrj7UEvfHzar8l32HaPD4&quot;, &quot;Get Geolocation from Google&quot; ,&quot;_blank&quot;),&quot;Need Location&quot;)</formula>
        <label>Get Geolocation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Last_Outreach_Processed__c</fullName>
        <description>Time stamp of last time automated outreach was processed.</description>
        <label>Last Outreach Processed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>C501_Legacy_Location__c</fullName>
        <description>Legacy Location information. Created because all admins have Edit Read Only Fields enabled and we need to make these two fields not editable.</description>
        <formula>TEXT(Location__c) + &quot; &quot;+  Location_Other__c</formula>
        <label>Location (Legacy)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Outreach_WA_Counties__c</fullName>
        <inlineHelpText>To which counties should outreach communications be targeted?</inlineHelpText>
        <label>Outreach WA Counties</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>C501_WA_Counties</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Registration_Link__c</fullName>
        <description>Used to merge with outreach emails and SMS</description>
        <formula>CASE(TEXT( Class_Type__c ),
 &quot;FFN&quot;, &quot;http://bit.ly/2SVj17N&quot;,
 &quot;Imagine U&quot;, &quot;http://bit.ly/2ZkTuYc&quot;,
&quot;Licensed&quot;,&quot;http://bit.ly/2YvJrSL &quot;,
&quot;Substitute&quot;,&quot;http://bit.ly/2YtyZqR&quot;,
&quot;PREPARE&quot;,&quot;http://bit.ly/2K2OLoG&quot;,
&quot;http://bit.ly/2ykRkfl&quot;)</formula>
        <label>C501_Registration Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Training_County__c</fullName>
        <formula>BLANKVALUE( TEXT(C501_Training_Location__r.C501_Imagine_WA_County__c) , &quot;Not Specified&quot;)</formula>
        <label>Training County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Training_Location_Additional__c</fullName>
        <inlineHelpText>Specify if the location has an addition , e.g. Room 5, Main Conference Room, etc.</inlineHelpText>
        <label>Training Location Additional</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Training_Location_Text__c</fullName>
        <formula>IF( ISNUMBER(RIGHT(C501_Training_Location__r.Name, 5)),&apos;&apos;, C501_Training_Location__r.Name) &amp; 
IF(ISNUMBER(RIGHT(C501_Training_Location__r.Name, 5)),&quot;&quot;,IF(ISBLANK(  C501_Training_Location_Additional__c ),&quot;&quot;,BR() ))&amp;
IF(ISBLANK( C501_Training_Location_Additional__c),&quot;&quot;,C501_Training_Location_Additional__c)&amp;

IF(AND(ISNUMBER(RIGHT(C501_Training_Location__r.Name, 5)),ISBLANK( C501_Training_Location__r.BillingStreet)),&quot;&quot;,IF(ISBLANK( C501_Training_Location__r.BillingStreet),&quot;&quot;,BR() ))&amp;

IF(ISBLANK( C501_Training_Location__r.BillingStreet),&quot;&quot;,C501_Training_Location__r.BillingStreet )      &amp; 
IF(ISBLANK( C501_Training_Location__r.BillingCity),&quot;&quot;,BR() &amp; C501_Training_Location__r.BillingCity  &amp; &quot;, &quot;  )&amp;  C501_Training_Location__r.BillingState  &amp; &quot; &quot; &amp;  C501_Training_Location__r.BillingPostalCode</formula>
        <label>Training Location Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Training_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Location Lookup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Training_Facility</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trainings</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>C501_Trigger_Event_Update__c</fullName>
        <inlineHelpText>Update this field to push Training (Campaign) changes to its respective Event record</inlineHelpText>
        <label>Trigger Event Update</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Web_Registration_URL__c</fullName>
        <formula>IF( TEXT( Class_Type__c ) = &quot;FFN&quot;, &quot;https://imaginewa.org/family-friends-and-neighbors-training/&quot;,

IF( TEXT( Class_Type__c ) = &quot;Licensed&quot;, &quot;https://imaginewa.org/licensed-family-child-care-providers-training/&quot;,

IF( TEXT( Class_Type__c ) = &quot;Substitute&quot;, &quot;https://imaginewa.org/become-a-substitute/&quot;,

IF( TEXT( Class_Type__c ) = &quot;Imagine U&quot;, &quot;https://imaginewa.org/imagine-u-mentor-program/&quot;,

IF( TEXT( Class_Type__c ) = &quot;PREPARE&quot;, &quot;https://imaginewa.org/what-we-do/prepare-for-care/&quot;,

IF( TEXT( Class_Type__c ) = &quot;Facility&quot;, &quot;https://imaginewa.org/find-a-substitute/&quot;,

NULL))))))</formula>
        <label>Web Registration URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Type__c</fullName>
        <label>Class Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>custom_ClassType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmation_Email_Template__c</fullName>
        <label>Confirmation Email Template</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Email_Template_Confirmation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <formula>&quot;FY&quot; + TEXT(IF(MONTH(DATEVALUE(custom_Start_DateTime__c)) &lt; 7, YEAR(DATEVALUE(custom_Start_DateTime__c)), YEAR(DATEVALUE(custom_Start_DateTime__c)) + 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incentive__c</fullName>
        <label>Incentive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Training_Incentive</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>custom_Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>All Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>custom_Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Other__c</fullName>
        <description>Other location for training</description>
        <inlineHelpText>***THIS FIELD IS NO LONGER USED*** Please use the Location &amp; Outreach section below.</inlineHelpText>
        <label>Location Addition</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <inlineHelpText>***THIS FIELD IS NO LONGER USED*** Please use the Location &amp; Outreach section below.</inlineHelpText>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Training_Location</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meal_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Meal Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reminder_Email_Template__c</fullName>
        <label>Reminder Email Template</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Email_Template_Reminder</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Contact</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Trainings</relationshipLabel>
        <relationshipName>Trainings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Active__c</fullName>
        <formula>IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Full_Name__c</fullName>
        <formula>Training_Name__c + &quot; - &quot; + Fiscal_Year__c + &quot; - &quot; + TEXT(Class_Type__c) + &quot; - &quot; + City__c + &quot; - &quot; + TEXT(Language__c) + 
 &quot; - &quot; + TEXT(DATEVALUE(custom_Start_DateTime__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Incentive__c</fullName>
        <label>Training Incentive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Training_Incentive</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Internal_Id__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Internal Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Location__c</fullName>
        <externalId>true</externalId>
        <label>Training Location</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Training_Name_WebForm__c</fullName>
        <formula>City__c + &quot; - &quot; + TEXT(Language__c) + 
&quot; - &quot; + TEXT(DATEVALUE(custom_Start_DateTime__c)) + &quot; - &quot; + Training_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Name WebForm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Name__c</fullName>
        <label>Training Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>custom_Class_Duration_Hours__c</fullName>
        <formula>ABS(custom_End_DateTime__c -  custom_Start_DateTime__c) * 24.0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Duration (hours)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>custom_End_DateTime__c</fullName>
        <label>End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>custom_Start_DateTime__c</fullName>
        <label>Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>custom_Training_Number__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ii_Days_Until_Class__c</fullName>
        <formula>custom_Start_DateTime__c - NOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Class</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Class_Type__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Classes</label>
    </listViews>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
</CustomObject>